<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list"
        android:name="es.ulpgc.eite.cleancode.catalog.ProductListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:context=".products.ProductListActivity"
        tools:listitem="@layout/product_list_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/goTofavouriteButtonFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:visibility="invisible"
        android:src="@drawable/ic_favorite_border_empty"
        app:backgroundTint="@color/colorPrimary"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
